--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,9 +59,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/stories1.jpg
-    - assets/photo1.jpg
-    - assets/photo2.jpg
+    - assets
+    # - assets/photo1.jpg
+    # - assets/photo2.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
